[package]
name = "cheater"
version = "0.1.0"
authors = ["Kyle Coffey <kylecoffey1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"
parking_lot = "0.12"
once_cell = "1.7"

[dependencies.cheater_macros]
path = "cheater_macros"

[build-dependencies]
cxx-build = "1.0"
