[package]
name = "dirs"
version = "0.1.0"
authors = ["Kyle Coffey <kylecoffey1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.43"
directories-next = "2.0.0"

[build-dependencies]
cxx-build = "1.0.43"
