[package]
name = "rust"
version = "0.1.0"
authors = ["kyle.coffey <kyle.coffey@tamu.edu>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nom = "6.1"
once_cell = "1.7"
parking_lot = "0.11"

[build-dependencies]
bindgen = "0.57"
cbindgen = "0.18"
